--- a/src/MainPage.xaml
+++ b/src/MainPage.xaml
@@ -9,7 +9,8 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
 
-    <NavigationView PaneDisplayMode="Top">
+    <NavigationView PaneDisplayMode="Top" ItemInvoked="NavigationView_ItemInvoked" 
+                    IsSettingsVisible="False" IsBackButtonVisible="Collapsed">
         <NavigationView.MenuItems>
             <NavigationViewItem Icon="Favorite" Content="Favorites"/>
             <NavigationViewItem Icon="Find" Content="Search">
@@ -17,61 +18,7 @@
 
         </NavigationView.MenuItems>
         <Frame x:Name="ContentFrame">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="3*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Row="0" Grid.Column="1" Margin="10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <AutoSuggestBox x:Name="SearchTextBox" MinWidth="200" QueryIcon="Find" PlaceholderText="Search"
-                            QuerySubmitted="SearchButton_Click" Margin="5"/>
-                    <ListBox x:Name="SearchListBox" Grid.Row="1" Margin="5" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <Grid VerticalAlignment="Center" CanDrag="True" HorizontalAlignment="Stretch">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="60"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Image Width="45" Height="45" HorizontalAlignment="Center" VerticalAlignment="Stretch"
-                                   Source="{Binding AlbumArt}" Grid.Column="0"/>
-                                    <TextBlock Text="{Binding PodcastString}" Grid.Column="1" Margin="4"/>
-                                    <Button Content="Add" Grid.Column="2" HorizontalAlignment="Right" x:Name="SearchAddButton" Click="SearchAddButton_Click"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Grid>
-                <ListBox x:Name="FavoritesListBox" Grid.Row="0" Grid.Column="0" AllowDrop="True" >
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Grid VerticalAlignment="Center">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="50"/>
-                                </Grid.ColumnDefinitions>
-                                <Image Width="45" Height="45" HorizontalAlignment="Center" VerticalAlignment="Stretch"
-                                   Source="{Binding AlbumArt}" Grid.Column="0"/>
-                                <TextBlock Text="{Binding PodcastString}" Grid.Column="1" Margin="4"/>
-                                <Button Grid.Column="2" Click="FavoritesListBox_Play" Background="Transparent">
-                                    <SymbolIcon Symbol="Play"/>
-                                </Button>
-                            </Grid>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-                <MediaPlayerElement x:Name="SearchMedia" AutoPlay="True" Grid.Row="1" Grid.ColumnSpan="2" AreTransportControlsEnabled="True" HorizontalAlignment="Stretch"/>
-            </Grid>
+
         </Frame>
     </NavigationView>
 
