--- a/src/FavoritesPage.xaml
+++ b/src/FavoritesPage.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Margin="10" >
+    <Grid Margin="10" x:Name="FavoritesGrid">
         <Grid.RowDefinitions>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -56,38 +56,81 @@
             </ListView>
         </Border>
 
-        <ListView Grid.Column="1"  x:Name="EpisodeList" ItemsSource="{Binding SelectedPodcast.Episodes}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid VerticalAlignment="Center" Background="Transparent" HorizontalAlignment="Stretch">
-                        <i:Interaction.Behaviors>
-                            <is:EventTriggerBehavior EventName="DoubleTapped">
-                                <is:CallMethodAction MethodName="FavoritesListBox_Play" TargetObject="{Binding ElementName=EpisodeList, Path=DataContext}"/>
-                            </is:EventTriggerBehavior>
-                        </i:Interaction.Behaviors>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Style="{StaticResource IconButton}">
+        <Grid Grid.Column="1" DataContext="{Binding SelectedPodcast}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
+            <Grid HorizontalAlignment="Center" Grid.Row="0" Margin="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Image Source="{Binding artworkUrl600}" Width="180" Grid.Column="0" Grid.RowSpan="2"/>
+                <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
+                    
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="0">
+                    <TextBlock Text="{Binding collectionName}" FontSize="18" Margin="3,1"/>
+                    <TextBlock Text="🅴" FontSize="18" Margin="3,1" Opacity=".7" ToolTipService.ToolTip="Explicit" Visibility="{Binding collectionExplicitness, Converter={StaticResource IsStringEqual}, ConverterParameter=explicit}"/>
+                </StackPanel>
+                <TextBlock Text="{Binding artistName}" Opacity=".7" Margin="3,0"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="4" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="1">
+
+                    <HyperlinkButton Padding="0" NavigateUri="{Binding collectionViewUrl}" ToolTipService.ToolTip="Open apple podcast">
+                        <Path StrokeThickness="0"
+                        Stroke="{ThemeResource ApplicationForegroundThemeBrush}" 
+                          Fill="{ThemeResource ApplicationForegroundThemeBrush}" 
+                          Data="M11.93 24s2.633 0 2.633-7.794c0-1.451-1.18-2.633-2.633-2.633s-2.634 1.182-2.634 2.633C9.296 24 11.93 24 11.93 24zm3.23-2.656c.115-.447.205-.896.275-1.351l.053-.36c.115-.05.23-.098.346-.15 1.828-.828 3.367-2.243 4.348-3.993.447-.803.777-1.67.973-2.572.227-1.008.285-2.059.166-3.088-.105-.963-.361-1.904-.77-2.787-.465-1.039-1.111-1.986-1.924-2.784-.828-.827-1.807-1.505-2.875-1.972-1.098-.496-2.303-.752-3.52-.782-1.22-.03-2.438.166-3.582.603-1.098.419-2.106 1.037-2.979 1.834-.827.752-1.534 1.67-2.046 2.678-.437.858-.736 1.776-.902 2.723-.166.979-.166 1.986-.016 2.98.135.872.391 1.73.768 2.543.888 1.881 2.393 3.444 4.258 4.394.226.104.451.21.692.314.015.121.046.256.06.392.075.438.166.889.271 1.325-.406-.136-.813-.287-1.204-.468-2.152-.976-3.972-2.662-5.101-4.754-.512-.947-.873-1.955-1.098-3.01-.257-1.158-.302-2.377-.15-3.566.15-1.112.466-2.211.933-3.22.556-1.188 1.339-2.286 2.271-3.204.916-.916 2.06-1.684 3.31-2.211C9.02.311 10.42.018 11.828.001c1.412-.015 2.824.24 4.139.758 1.266.498 2.434 1.238 3.43 2.166.965.895 1.76 1.962 2.346 3.139.496.993.842 2.076 1.008 3.175.18 1.144.18 2.317-.016 3.446-.166 1.053-.512 2.091-.979 3.053-1.053 2.122-2.799 3.868-4.92 4.922-.527.256-1.084.481-1.655.661l-.021.023zm.52-4.295l.01-.47c0-.316 0-.632-.046-.943-.015-.121-.045-.226-.075-.346.557-.451 1.023-1.023 1.369-1.67.256-.481.451-1.008.557-1.551.121-.602.15-1.233.061-1.865-.074-.557-.227-1.098-.451-1.61-.285-.616-.677-1.188-1.158-1.67-.497-.481-1.054-.872-1.686-1.159-.692-.3-1.445-.48-2.197-.496-.752-.015-1.52.121-2.227.392-.632.256-1.219.617-1.73 1.083-.513.466-.934 1.008-1.235 1.624-.257.496-.436 1.024-.542 1.58-.105.572-.119 1.159-.045 1.73.075.557.226 1.099.451 1.609.346.768.857 1.445 1.49 2.002l-.091.406c-.06.316-.045.617-.045.947v.422c-1.054-.646-1.927-1.58-2.513-2.663-.347-.617-.587-1.279-.723-1.972-.166-.768-.195-1.564-.09-2.347.09-.707.286-1.399.572-2.032.346-.781.857-1.504 1.459-2.121.617-.617 1.339-1.113 2.121-1.459.873-.391 1.82-.602 2.769-.632.964-.016 1.927.15 2.813.497.813.315 1.551.781 2.197 1.368.631.587 1.174 1.278 1.564 2.047.316.632.557 1.309.678 2.001.121.723.15 1.459.045 2.182-.09.707-.285 1.399-.588 2.046-.586 1.31-1.594 2.438-2.828 3.176l.114-.106zm-3.75-9.575c1.465 0 2.654 1.188 2.654 2.656 0 1.473-1.189 2.662-2.654 2.662-1.467 0-2.655-1.189-2.655-2.648s1.188-2.649 2.655-2.649v-.021z"
+                          />
+                    </HyperlinkButton>
+                </StackPanel>
+
+
+            </Grid>
+            <ListView Grid.Row="1"  x:Name="EpisodeList" ItemsSource="{Binding Episodes}" HorizontalAlignment="Center" MinWidth="500">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid VerticalAlignment="Center" Background="Transparent" HorizontalAlignment="Stretch" MinWidth="500">
                             <i:Interaction.Behaviors>
-                                <is:EventTriggerBehavior EventName="Click">
-                                    <is:CallMethodAction MethodName="FavoritesListBox_Play" TargetObject="{Binding ElementName=EpisodeList, Path=DataContext}"/>
+                                <is:EventTriggerBehavior EventName="DoubleTapped">
+                                    <is:CallMethodAction MethodName="FavoritesListBox_Play" TargetObject="{Binding ElementName=FavoritesGrid, Path=DataContext}"/>
                                 </is:EventTriggerBehavior>
                             </i:Interaction.Behaviors>
-                            <Viewbox Width="20" VerticalAlignment="Center">
-                            <StackPanel>
-                                <SymbolIcon Symbol="Accept"  Visibility="{Binding HasListened}"/>
-                                <SymbolIcon Symbol="Play"  Visibility="{Binding HasListened, Converter={StaticResource InvertBool}}"/>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" Style="{StaticResource IconButton}">
+                                <i:Interaction.Behaviors>
+                                    <is:EventTriggerBehavior EventName="Click">
+                                        <is:CallMethodAction MethodName="FavoritesListBox_Play" TargetObject="{Binding ElementName=FavoritesGrid, Path=DataContext}"/>
+                                    </is:EventTriggerBehavior>
+                                </i:Interaction.Behaviors>
+                                <Viewbox Width="20" VerticalAlignment="Center">
+                                    <StackPanel>
+                                        <SymbolIcon Symbol="Accept"  Visibility="{Binding HasListened}"/>
+                                        <SymbolIcon Symbol="Play"  Visibility="{Binding HasListened, Converter={StaticResource InvertBool}}"/>
+                                    </StackPanel>
+                                </Viewbox>
+                            </Button>
+                                <TextBlock Text="{Binding Title}" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Margin="4" MaxWidth="350" TextWrapping="WrapWholeWords"/>
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Right" Grid.Column="2" Margin="3" Opacity="0.7">
+                                <TextBlock Text="{Binding pubDate, Converter={StaticResource DateTimeString}}"  HorizontalAlignment="Right"/>
+                                <TextBlock Text="{Binding duration}" HorizontalAlignment="Right"/>
                             </StackPanel>
-                                
-                            </Viewbox>
-                        </Button>
-                        
-                        <TextBlock Text="{Binding Title}" Grid.Column="1" Margin="4"/>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+
     </Grid>
 </Page>
